# date-formatter-challenge

./: .clang-format  CMakeLists.txt  README.md
src/: Utils.cpp  Utils.hpp  main.cpp
tests/: CMakeLists.txt  test_dates_formats.cpp
